<resources>
    <string name="app_name">Kamerdate</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="moto">Your next accommodation is just a tap away.</string>
    <string name="background_for_sign_up">background for sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_dot">Sign up.</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_dot">Log in.</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
    <string name="don_t_have_an_account">Don\'t have an account?&#160;</string>
    <string name="remember_me">Remember me</string>
    <string name="logo_of_kamerdate">logo of Kamerdate</string>
    <string name="sample_tenant_info">Tenant information in this scrollable view!\n\n Smoker: No\n\n Pet owner: Yes \n\n Student: Yes</string>
    <string name="sample_accommodation_info">Accommodation information in this scrollable view!\n\n Price: 695$\n\n This studio is located close to the center and TU/e. \n\n More info…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked">Liked</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="accommodations">Listings</string>
    <string name="new_password">New Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="current_password">Current Password</string>
    <string name="ivanov">Ivanov</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="ivan">Ivan</string>
    <string name="tenant">Tenant</string>
    <string name="landlord">Landlord</string>
    <string name="my_listings">My Listings</string>
    <string name="scrollable_element_that_encompasses_all_your_listings">Scrollable element that encompasses all your listings</string>
    <string name="add_new_accommodation">Add new accommodation</string>
    <string name="thumbnail_of_accommodation">Thumbnail of accommodation</string>
    <string name="sample_street">Caderlaan</string>
    <string name="sample_apartment">142W</string>
    <string name="edit_accommodation">Edit accommodation</string>
    <string name="sample_99">99</string>
    <string name="create_listing">Create Listing</string>
    <string name="scrollable_container_holding_the_new_listing_properties">scrollable container holding the new listing properties</string>
    <string name="street">Street</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="house_number">House number</string>
    <string name="location">Location</string>
    <string name="properties">Additional properties</string>
    <string name="monthly_rental_price">Monthly rental price (€)</string>
    <string name="surface_area">Surface area</string>
    <string name="add_listing_description">Add listing description...</string>
    <string name="availability">Availability</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="dd_mm_yyyy">(dd/mm/yyyy)</string>
    <string name="are_smokers_allowed">Are smokers allowed?</string>
    <string name="is_the_listing_furnished">Is the listing furnished?</string>
    <string name="are_pets_allowed">Are pets allowed?</string>
    <string name="pictures">Pictures</string>
    <string name="image_to_show_the_selected_panorama_images_for_the_listing">image to show the selected panorama images for the listing</string>
    <string name="image_to_show_the_selected_normal_images_for_the_listing">image to show the selected normal images for the listing</string>
    <string name="panorama">360° (AR)</string>
    <string name="normal">Normal</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="add_listing_street">Add listing street</string>
    <string name="add_listing_house_number">Add listing house number</string>
    <string name="add_listing_city">Add listing city</string>
    <string name="add_listing_postcode">Add listing postcode</string>
    <string name="add_listing_rental_price">Add listing rental price</string>
    <string name="add_start_date">Add start date</string>
    <string name="add_end_date">Add end date</string>
    <string name="add_listing_surface_area">Add listing surface area</string>
    <string name="edit_listing_details">Edit Listing Details</string>
    <string name="save">Save</string>
    <string name="sample_price_amount">€400</string>
    <string name="liked_listings">Liked Listings</string>
    <string name="liked_listings_settings">liked listings settings</string>
    <string name="remove_listing_title">Remove listing</string>
    <string name="remove_listing_message">Are you sure you want to permanently remove listing from liked page?</string>
    <string name="sample_20">20</string>
    <string name="meters">m</string>
    <string name="square_units">2</string>
    <string name="loren_ipsum_30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque felis odio, porttitor id tortor ut, faucibus tincidunt libero. Nulla vitae consequat tellus. Fusce leo erat, ultricies quis lacus ut, pretium.</string>
    <string name="view_property">View Property</string>
    <string name="sample_city">Eindhoven</string>
    <string name="sample_postcode">1234 AB</string>
    <string name="sample_date_1">29/11/2001</string>
    <string name="sample_date_2">30/03/2022</string>
    <string name="remove_listing_from_liked_page"><u>Remove listing from liked page</u></string>
    <string name="floor">Floor</string>
    <string name="add_floor">Add floor</string>
    <string name="ground_floor">Ground floor</string>
    <string name="landlord_details">Landlord details</string>
    <string name="phone_number">Phone number</string>
    <string name="sample_phone">0123456789</string>
    <string name="name">Name</string>
    <string name="sample_name">Georgi Georgiev</string>
    <string name="sample_email">georgi.georgiev@gmail.com</string>
    <string name="minimum_rental_period">Minimum rental period</string>
    <string name="_6_months">6 months</string>
    <string name="add_minimum_rental_period">Add minimum rental period</string>
    <string name="lorem_ipsum_100">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras non lectus iaculis, porttitor massa non, tempor neque. Nunc malesuada orci auctor, dictum neque ut, ultrices arcu. Sed rhoncus placerat diam, tempus feugiat nulla vestibulum non. Aliquam erat volutpat. Fusce egestas ligula nec lectus vehicula, non fermentum urna mollis. Ut pulvinar lectus eu nulla volutpat, vel malesuada elit tincidunt. Ut bibendum placerat nibh sit amet tincidunt. Nullam laoreet blandit venenatis. Suspendisse posuere quam at tellus sollicitudin, id eleifend augue lobortis. Ut tempus consequat lobortis. Proin convallis eros velit, sed vulputate neque tristique id. Ut at condimentum leo. Aliquam ac libero eu.</string>
    <string name="profile_picture_of_tenant">profile picture of tenant</string>
    <string name="does_not_have_pets">Does NOT have pets</string>
    <string name="does_not_smoke">Does NOT smoke</string>
    <string name="caderlaan_142w">Caderlaan 142W</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="furnished">Furnished</string>
    <string name="including_utilities">Including utilities</string>
    <string name="apartment">Apartment</string>
    <string name="_400_per_month">€400 per month</string>
    <string name="_1234_ab_eindhoven">1234 AB, Eindhoven</string>
    <string name="open_filters_dialog_button">Open filters dialog button</string>
    <string name="available_from_06_06_2022">Available from 06/06/2022</string>
    <string name="_6_months_minimum">6 months minimum</string>
    <string name="smokers_allowed">Smokers allowed</string>
    <string name="until_03_03_2022">until 03/03/2022</string>
    <string name="show_normal_or_ar_photos_button">Show normal or ar photos button</string>
    <string name="like_tenant_button">Like tenant button</string>
    <string name="neutral_landlord_button">Neutral landlord button</string>
    <string name="dislike_tenant_button">Dislike tenant button</string>
    <string name="like_accommodation_button">Like accommodation button</string>
    <string name="dislike_accommodation_button">Dislike accommodation button</string>
    <string name="listing_settings">Listing Settings</string>
    <string name="show_neutral_listings">Show neutral listings</string>
    <string name="show_negative_listings">Show negative listings</string>
    <string name="show_positive_listings">Show positive listings</string>
    <string name="delete_listing"><u>Delete Listing</u></string>
    <string name="no_swipes_in_your_area">No swipes in your area!</string>
    <string name="sad_face_image">sad face image</string>
    <string name="sample_error_login_text">* Username or password missing</string>
    <string name="invalid_message">* Invalid message</string>
    <string name="logout_title">Log Out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="edit_settings_title">Set your details</string>
    <string name="edit_settings_message">You have to fill in a few more details about yourself before you can use the app as a tenant.</string>
    <string name="change_your_gender">Change your gender</string>
    <string name="confirm_changes">Confirm Changes</string>
</resources>
