<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tenantLikedFragment"
        android:icon="@drawable/heart_selector"
        android:title="@string/liked"
        android:visible="true" />
    <item
        android:id="@+id/landlordAccommodationManagementFragment"
        android:icon="@drawable/buildings_selector"
        android:title="@string/accommodations"
        android:visible="false" />
    <item
        android:id="@+id/tenantDiscoverFragment"
        android:checked="true"
        android:icon="@drawable/compass_selector"
        android:title="@string/discover"
        android:visible="true" />
    <item
        android:id="@+id/landlordDiscoverFragment"
        android:icon="@drawable/compass_selector"
        android:title="@string/discover"
        android:visible="false" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_selector"
        android:title="@string/settings"
        android:visible="true" />
</menu>