<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compactAccommodationContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/listingThumbnail"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:background="@drawable/circlestyle"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            android:contentDescription="@string/thumbnail_of_accommodation"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_accommodation_picture"
            tools:ignore="ImageContrastCheck"
            tools:targetApi="s" />

        <TextView
            android:id="@+id/streetNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/sample_street"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/listingThumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/apartmentNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sample_apartment"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/streetNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/streetNameTxt" />

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/edit_accommodation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@color/dark_blue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/likesTxt"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="-4dp"
        android:background="@drawable/ic_heart_filled"
        android:backgroundTint="@color/heart_red"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sample_99"
        android:textColor="@color/whitish"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/contentContainer"
        app:layout_constraintTop_toTopOf="@id/contentContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>